--- a/web-client.html
+++ b/web-client.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 
+    <!-- CASE 1: incase you want to send file to server directly using Html form -->
     <!-- from multer repo example - working good -->
     <!-- <form action="http://localhost:3000/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="avatar" />
@@ -20,24 +21,48 @@
 
 
 
-    <input type="file" id="fileInput">
+    <!--CASE 2:  incase you want make request using javacript, its my favourite because it gives me not just just html5 validation on form but I can also apply some javascript conditions before submiting form-->
+    <!-- <form onsubmit="return upload()"> -->
+    <!-- dont get confused with return keyword inside onsubmit, it is there to prevent html page to reload/default behaviour, and this have nothing to do with actual file upload process but if you remove it page will reload on submit -->
 
-    <button onclick="upload()">Upload</button>
+    <input required type="file" id="fileInput">
+    <!-- <button type="submit"> Upload </button> -->
+    <button onclick="upload()"> Upload </button>
+    <!-- </form> -->
 
 
     <script>
         function upload() {
 
-
-            let formData = new FormData();
-
             var fileInput = document.getElementById("fileInput");
+
+            // // To convert a File into Blob (not recommended)
+            // var blob = null;
+            // var file = fileInput.files[0];
+            // let reader = new FileReader();
+            // reader.readAsArrayBuffer(file)
+            // reader.onload = function (e) {
+            //     blob = new Blob([new Uint8Array(e.target.result)], { type: file.type });
+            //     console.log(blob);
+            // }
 
             console.log("fileInput: ", fileInput);
             console.log("fileInput: ", fileInput.files[0]);
 
-            formData.append("file", fileInput.files[0]); // for browser only, use fs for nodejs client
+            let formData = new FormData();
+            // https://developer.mozilla.org/en-US/docs/Web/API/FormData/append#syntax
+            
+            formData.append("myFile", fileInput.files[0]); // file input is for browser only, use fs to read file in nodejs client
+            // formData.append("myFile", blob, "myFileNameAbc"); // you can also send file in Blob form (but you really dont need to covert a File into blob since it is Actually same, Blob is just a new implementation and nothing else, and most of the time (as of january 2021) when someone function says I accept Blob it means File or Blob) see: https://stackoverflow.com/questions/33855167/convert-data-file-to-blob
+            formData.append("myName", "malik"); // this is how you add some text data along with file
+            formData.append("myDetails",
+                JSON.stringify({
+                    "subject": "Science",   // this is how you send a json object along with file, you need to stringify (ofcourse you need to parse it back to JSON on server) your json Object since append method only allows either USVString or Blob(File is subclass of blob so File is also allowed)
+                    "year": "2021"
+                })
+            );
 
+            // you may use any other library to send from-data request to server, I used axios for no specific reason, I used it just because I'm using it these days, earlier I was using npm request module but last week it get fully depricated, such a bad news.
             axios({
                 method: 'post',
                 url: "http://localhost:3000/upload",
@@ -51,6 +76,7 @@
                     console.log(err);
                 })
 
+            return false; // dont get confused with return false, it is there to prevent html page to reload/default behaviour, and this have nothing to do with actual file upload process but if you remove it page will reload on submit -->
 
         }
     </script>
